fix(css): add tiny logo on mobile and fix templateGlobalMobile css

--- a/frontend/src/pages/Template/TemplateGlobalMobile.module.css
+++ b/frontend/src/pages/Template/TemplateGlobalMobile.module.css
@@ -8,6 +8,7 @@
 .headerDiv {
     display: flex;
     justify-content: space-between;
+    gap: 1em;
     align-items: center;
     padding: 0 1.25em;
     height: 5em;
@@ -22,6 +23,8 @@
 
 .title {
     margin: 0;
+    font-size: 1.8em;
+    font-weight: 600;
 }
 
 .headerRight {
@@ -30,12 +33,13 @@
 }
 
 .notificationBell {
-    height: 1.2em;
+    height: 1.3em;
 }
 
 .notificationIcon {
     position: relative;
-    margin-right: 1.25em;
+    margin-right: 1.2em;
+    margin-top: 0.5em;
 }
 
 .notificationCount {
@@ -43,7 +47,7 @@
     position: absolute;
     top: -0.625em;
     right: -0.625em;
-    background-color: #df3623;
+    background-color: #cf2f1d;
     color: white;
     border-radius: 1em;
     height: 1.25em;
@@ -84,11 +88,21 @@
     background-color: rgb(255, 255, 255);
     border-radius: 0.6em 0.6em 0 0;
     padding: 0.8em 0;
-    z-index: 1000; /* Assurez-vous que l'élément est au-dessus des autres */
+    z-index: 1000;
     box-shadow: 0 -0.25em 0.25em rgba(0, 0, 0, 0.1);
 }
 
 .navbarIcon {
     font-size: 2em;
     color: #333;
+}
+
+.logoMobile {
+    height: 2em;
+}
+
+.topLeftHader {
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
 }
